# triangulo-catch2-ChristopherCalderon

./: CMakeLists.txt  test.cpp  triangulo.cpp
.github/classroom/: autograding.yml
.github/workflows/: c-cpp.yml  classroom.yml
